[PROD-7479] Heading alignment corrections

--- a/src/bp-core/admin/css/common-rtl.css
+++ b/src/bp-core/admin/css/common-rtl.css
@@ -4487,8 +4487,9 @@ h1.bb-advance-heading {
 
 @media screen and (max-width: 560px) {
   h1.bb-advance-heading {
-    font-size: 22px;
+    font-size: 20px;
     margin-bottom: 30px;
+    text-align: center;
   }
 }
 
