--- a/src/bp-core/admin/sass/common.scss
+++ b/src/bp-core/admin/sass/common.scss
@@ -4833,8 +4833,9 @@ h1.bb-advance-heading {
 	}
 
 	@media screen and (max-width: 560px) {
-		font-size: 22px;
+		font-size: 20px;
 		margin-bottom: 30px;
+		text-align: center;
 	}
 }
 
